Increase set active marker to make it more visible when playhead is at start (issue #193)

--- a/src/app/core/components/timeline/track/track.component.scss
+++ b/src/app/core/components/timeline/track/track.component.scss
@@ -97,7 +97,7 @@
     z-index: 1;
     position: absolute;
     height: 100%;
-    width: 2px;
+    width: 4px;
     background-color: black;
   }
 }
